--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ariakit/react": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.22.3",
     "vite-plugin-svgr": "^4.2.0"
   },
